--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "prettier": {
+    "singleQuote": true
+  },
   "scripts": {
     "start": "budo index.js --live --serve bundle.js",
     "build": "browserify index.js > bundle.js"
@@ -10,10 +13,24 @@
   "author": "Beau Gunderson <beau@beaugunderson.com> (https://beaugunderson.com/)",
   "license": "MIT",
   "dependencies": {
-    "bent": "^7.3.10"
+    "an-array-of-english-words": "^2.0.0",
+    "bent": "^7.3.10",
+    "emoji-regex": "^9.0.0",
+    "eslint-plugin-import": "^2.22.0",
+    "history": "^5.0.0",
+    "hs-client": "0.0.9",
+    "hsd": "^2.2.0",
+    "punycode": "^2.1.1",
+    "query-string": "^6.13.3",
+    "xregexp": "^4.3.0"
   },
   "devDependencies": {
     "browserify": "^16.5.2",
-    "budo": "^11.6.4"
+    "budo": "^11.6.4",
+    "eslint": "^7.10.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.2"
   }
 }
